Bug 295584 - Automatic scrolling of folder pane gets "stuck"
Summary: Automatic scrolling of folder pane gets "stuck"
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: folders (other bugs)
Version First Reported In: 2.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 293002 295128 296150 296339 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-09 08:04 UTC by Jared B.
Modified: 2012-03-23 21:41 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jared B. 2012-03-09 08:04:54 UTC
First, to clarify: by "automatic scrolling" here, I mean the behavior of Dolphin to scroll up or down as necessary if I'm moving a file and hover over the top or bottom of the folder pane.

The problem that, in some cases this automatic scrolling will get stuck and will perpetually continue trying to scroll up (or down) until Dolphin is restarted.  The easiest way I've been able to find to replicate the problem is this:

1. Expand a few folders in the folder pane so that there's plenty of room to scroll up and down through the directory tree
2. Scroll towards the bottom and select a folder so you see the file contents in the browser pane
3. Drag one of the files to the top of the folder and wait for it to begin scrolling up
4. Release the mouse button while the panel is still scrolling, and click when asked what you want to do with the file

At this point, the folder pane will continue scrolling up until it reaches the top.  You can use the mouse wheel to manually scroll it down, but it will scroll back to the top again once you stop taking any action.
Comment 1 Peter Penz 2012-03-09 08:18:17 UTC
Thanks for the detailed description, I could reproduce the issue.
Comment 2 Peter Penz 2012-03-09 16:16:02 UTC
*** Bug 295128 has been marked as a duplicate of this bug. ***
Comment 3 Peter Penz 2012-03-09 16:58:43 UTC
Git commit 6bf5f888c6735407645b53da82f57ec557fad5fc by Peter Penz.
Committed on 09/03/2012 at 17:57.
Pushed by ppenz into branch 'KDE/4.8'.

Prevent endless scrolling of list when dragging items
FIXED-IN: 4.8.2

M  +3    -0    dolphin/src/kitemviews/kitemlistcontroller.cpp
M  +0    -1    dolphin/src/kitemviews/kitemlistview.cpp

http://commits.kde.org/kde-baseapps/6bf5f888c6735407645b53da82f57ec557fad5fc
Comment 4 Peter Penz 2012-03-09 16:59:18 UTC
Git commit 879f8aacb17b88fc81b13a0901c153615808b200 by Peter Penz.
Committed on 09/03/2012 at 17:57.
Pushed by ppenz into branch 'master'.

Prevent endless scrolling of list when dragging items
FIXED-IN: 4.8.2

M  +3    -0    dolphin/src/kitemviews/kitemlistcontroller.cpp
M  +0    -1    dolphin/src/kitemviews/kitemlistview.cpp

http://commits.kde.org/kde-baseapps/879f8aacb17b88fc81b13a0901c153615808b200
Comment 5 Jared B. 2012-03-09 17:02:04 UTC
Wow, that was a fast response.  Thanks, Peter!
Comment 6 Peter Penz 2012-03-09 17:21:58 UTC
You're welcome :-) Sadly it takes one month until 4.8.2 gets released...
Comment 7 Daniel Moyne 2012-03-12 18:09:55 UTC
oops what is automatic scrolling of folder pane, I mean how does it triger to automatic mode.
Comment 8 Peter Penz 2012-03-16 13:47:25 UTC
*** Bug 296150 has been marked as a duplicate of this bug. ***
Comment 9 abrahams 2012-03-16 21:44:31 UTC
In the meantime, are there any tricks to stop the automatic scrolling?
Comment 10 Peter Penz 2012-03-19 10:57:13 UTC
*** Bug 296339 has been marked as a duplicate of this bug. ***
Comment 11 Daniel Moyne 2012-03-22 08:57:30 UTC
this bug is still on as I experiencezd it yesterday when moving the vertical slider down to expose more icons of the window area : the window slider moves back itself!

The only way to expose those icons was to click on space bemow vertical slider which is the other way to mow down the vertical slider step by step.

There is nothing sprecial that I can add for the time being tha would bring a cliue to the developer.
Comment 12 Peter Penz 2012-03-22 09:13:34 UTC
@Daniel Moyne:
> this bug is still on as I experiencezd it yesterday 

Did you use 4.8.2 already? And are you sure you mean the exactly same issue as Jared reported?
Comment 13 Jared B. 2012-03-22 13:37:34 UTC
Just to chime in:  the patch Peter provided did fix the problem for me, but as he noted it won't be applied until 4.8.2 is released.  I manually patched my instance of Dolphin in 4.8.1 so I don't have to wait until then.  You'll either need to manually patch this yourself, or make sure you're running the latest 4.8.2 beta, in order to get the fix.
Comment 14 Daniel Moyne 2012-03-23 09:00:16 UTC
thanks for the proposed fix but as this bug is nor really botheriing me for the time bieng knowing it will be repaired soon I will live with it until then.
Comment 15 Daniel Moyne 2012-03-23 09:03:55 UTC
I thought that my version number automatically swoed up in my bug report! I am currently using 4.8.1
Comment 16 Peter Penz 2012-03-23 21:41:27 UTC
*** Bug 293002 has been marked as a duplicate of this bug. ***