Prevent endless scrolling of list when dragging items

BUG: 295584
FIXED-IN: 4.8.2